--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
                     <div class="relative mt-5 lg:mt-5 lg:right-0">
-                        <img src="/dist/img/why_nobg.png" alt="Wahyu Aji Nugroho" class="max-w-xs mx-auto rounded-lg">
+                        <img src="/Portfolio-Tailwind-css/dist/img/why_nobg.png" alt="Wahyu Aji Nugroho" class="max-w-xs mx-auto rounded-lg">
                         <span class="absolute -bottom-5 -z-10 left-1/2 -translate-x-1/2">
                             <svg width="500" height="500" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                                 <path fill="#06b6d4" d="M45,-66.9C56.7,-62.4,63.6,-47.3,63.9,-33.2C64.2,-19,57.8,
