--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
             <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="/dist/img/Portfolio/xor.png" alt="XOR Project" width="w-full h-full object-cover">
+                        <img src="/Portfolio-Tailwind-css/dist/img/Portfolio/xor.png" alt="XOR Project" width="w-full h-full object-cover">
                         <h3 class="font-semibold text-xl text-dark mt-3 mb-5">XOR Learning Project</h3>
                         <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum aut autem veniam impedit obcaecati expedita.</p>
                     </div>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="/dist/img/Portfolio/artemis.png" alt="NASA Artemis" width="w-full h-full object-cover">
+                        <img src="/Portfolio-Tailwind-css/dist/img/Portfolio/artemis.png" alt="NASA Artemis" width="w-full h-full object-cover">
                         <h3 class="font-semibold text-xl text-dark mt-3 mb-5">NASA Artemis New Project</h3>
                         <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum aut autem veniam impedit obcaecati expedita.</p>
                     </div>
